--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -5,9 +5,8 @@
 #                    All Rights Reserved                      #
 #                                                             #
 ###############################################################
-
-$caCredits = "
-<div style='overflow:scroll;overflow-x:hidden; overflow-y:auto;margin-top:auto;'>
+?>
+<div style='overflow:scroll;overflow-x:hidden; overflow-y:auto;margin:auto;width:600px;'>
     <center><table style='margin-left:auto;padding-top:0px;margin-top:0px;'>
 			<tr>
 				<td colspan='3'><center><img src='https://raw.githubusercontent.com/Squidly271/plugin-repository/master/CA.png' style='height:5rem;margin-top:2rem;'></td>
@@ -25,6 +24,11 @@ $caCredits = "
         <td class='ca_credit'>bonienl<br>eschultz</td>
         <td>Additional Contributions</td>
       </tr>
+			<tr>
+				<td></td>
+				<td class='ca_credit'>Mex</td>
+				<td>GUI Design</td>
+			</tr>
 			<tr>
 				<td></td>
 				<td class='ca_credit'>Andrew Zawadzki<br>Kode<br>Limetech</td>
@@ -45,6 +49,4 @@ $caCredits = "
     <center><em><font size='1rem;'>Copyright &copy; 2015-2019 Andrew Zawadzki</font></em></center>
     <center><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src='https://github.com/Squidly271/community.applications/raw/master/webImages/donate-button.png' style='height:2.5rem;'></a></center>
 		<center>Ensuring only safe applications are present is a full time job
-  </div>";
-  $caCredits = str_replace("\n","",$caCredits);
-?>
+  </div>
