--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/include/caCredits.html
@@ -16,33 +16,33 @@
 			</tr>
       <tr>
         <td class='ca_credit'><br><img src='https://github.com/Squidly271/plugin-repository/raw/master/Chode_300.gif' style='width:5rem;height:4.8rem;'></td>
-        <td class='ca_credit'><font size='4rem;'><em>Andrew Zawadzki&nbsp;&nbsp;</em></font></strong></td>
-        <td><font size='4rem;'><em>Main Development</em></font></td>
+        <td class='ca_credit'><font size='6rem;'><em>Andrew Zawadzki&nbsp;&nbsp;</em></font></strong></td>
+        <td><font size='6rem;'><em>Main Development</em></font></td>
       </tr>
       <tr>
         <td></td>
         <td class='ca_credit'>bonienl<br>eschultz</td>
-        <td>Additional Contributions</td>
+        <td class='ca_credit'>Additional Contributions</td>
       </tr>
 			<tr>
 				<td></td>
 				<td class='ca_credit'>Mex</td>
-				<td>GUI Design</td>
+				<td class='ca_credit'>GUI Design</td>
 			</tr>
 			<tr>
 				<td></td>
 				<td class='ca_credit'>Andrew Zawadzki<br>Kode<br>Limetech</td>
-				<td>Application Feed</td>
+				<td class='ca_credit'>Application Feed</td>
 			</tr>
       <tr>
         <td></td>
         <td class='ca_credit'>CHBMB<br>SpaceInvaderOne<br>Sparklyballs<br>wgstarks<br>DJoss<br>Zer0Nin3r</td>
-        <td>Additional Testing</td>
+        <td class='ca_credit'>Additional Testing</td>
       </tr>
 			<tr>
 				<td></td>
 				<td class='ca_credit'>dockerPolice<br>pluginCop</td>
-				<td>Moderation</td>
+				<td class='ca_credit'>Moderation</td>
 			</tr>
     </table></center>
     <br>
